# jp_lms_vibeops

./: .gitattributes  .gitignore  AGENTS.md  PROJECT.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: validate.yml
app/evidence-ux/: app.js  index.html  styles.css
apps/web/: package.json
docs/: 00-product-brief.md  01-system-architecture.md  02-domain-model.md  03-demo-and-pilot-plan.md  04-governance-and-risk.md  05-build-roadmap.md  06-control-plane-first-implementation.md  07-production-web-app-foundation.md  release-readiness.md
docs/decisions/: ADR-0001-project-reset.md  ADR-0002-control-plane-first.md
docs/evidence-ux/: information-architecture.md  readiness-review.md
docs/pilot/: appi-readiness-checklist.md  decision-brief.md  (+5 more)
ops/: approval-gates.md  backlog.yaml  milestones.yaml  status.md  worktree-sandbox.md
references/: README.md  reference-manifest.md
scripts/: capture_evidence_ux_snapshot.py  export_evidence_ux_data.py  run_adapter_sample.py  run_control_plane.py  run_scenario_matrix.py  validate_browser_smoke.py  validate_contracts.py  validate_evidence_ux.py  validate_formal_schemas.py  validate_governance.py  validate_packaging.py  validate_project.py  validate_screenshots.py  validate_static_ui.py  validate_web_app.py
specs/: ai-operation-state-machine.yaml  approval.schema.yaml  event-catalog.yaml  impact-ledger.schema.yaml  lms-adapter.schema.yaml  measurement-plan.schema.yaml  measurement-result.schema.yaml  scenarios.yaml  xai-card.schema.yaml
tests/: test_adapter.py  test_control_plane.py
(+72 files in other folders)
